ACTUALLY fixed those things this time

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
     <section>
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6 order-lg-2">
+          <div class="col-lg-5 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/1.jpg" alt="">
+              <img class="img-fluid rounded-circle" src="img/1.JPG" alt="">
             </div>
           </div>
-          <div class="col-lg-6 order-lg-1">
+          <div class="col-lg-7 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">We work hard, so you don't have to</h2>
               <p>Our experienced developers will work around the clock to create a software solution that will meet your needs, and reduce your workload, so you can get back to doing what you do best - serving the community.</p>
@@ -85,15 +85,15 @@
     <section>
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6">
+          <div class="col-lg-5">
             <div class="p-5">
               <img class="img-fluid rounded-circle" src="img/2.JPG" alt="">
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-7">
             <div class="p-5">
               <h2 class="display-4">Pro Bono</h2>
-              <p>For those who don't speak French, we'll do any project completely free. We also personally work with hosting and domain companies to ensure that these fees are as low as possible.</p>
+              <p>For those who don't speak Latin, we'll do any project completely free. We also personally work with hosting and domain companies to ensure that these fees are as low as possible.</p>
             </div>
           </div>
         </div>
@@ -103,12 +103,12 @@
     <section>
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6 order-lg-2">
+          <div class="col-lg-5 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/3.jpg" alt="">
+              <img class="img-fluid rounded-circle" src="img/3.JPG" alt="">
             </div>
           </div>
-          <div class="col-lg-6 order-lg-1">
+          <div class="col-lg-7 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">Helping you helps us</h2>
               <p>Code For Change is more than just a team of developers -- we are organization of ambitions students. Giving your local branch a project to work on helps those students further develop their Computer Science skills.</p>
