mobile improvements, project page updated, team page photos, other front end improvements

--- a/code/projects.html
+++ b/code/projects.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="">
       <meta name="author" content="">
-      <link rel="icon" href="img/logo.jpg" />
+      <link rel="icon" href="img/logo.png" />
 
       <title>Code For Change</title>
 
@@ -51,17 +51,16 @@
       </div>
     </nav>
 
-    <div class="container" style="padding-top:5%">
-
+    <div class="container main-body">
       <!-- Page Heading -->
-      <h1 class="my-4">Our Projects
+      <h1 class="display-1 headline">Our Projects
       </h1>
 
       <!-- Project One -->
-      <div class="row">
+      <div class="row" style="margin-bottom: 5%">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="img/sapphire.png" alt="">
+            <img class="img-thumbnail" src="img/sapphire.png" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -69,7 +68,21 @@
           <p>A volunteer management and hour tracking system developed for Exodus Refugee Immigration Inc. This organization expressed that their current paper-and-pencil system for tracking volunteers is very labor intensive, requiring a staff member to pend hours a week crunching the numbers. Our solution not only makes it easier for volunteers to find potentinal opportunities, it also allows organizations to track the hours performed by each volunteer.</p>
           <p></p>
           <p>The site is currently in Beta mode, meaning it is only used by Exodus, but it will soon be available for any organization to use with only a minimal hosting and domain charge.</p>
-          <a href="#" class="btn btn-primary btn-xl rounded-pill mt-1">View Project</a>
+          <a href="https://sapphire-web.herokuapp.com" class="btn btn-primary btn-xl rounded-pill mt-1">View Project</a>
+        </div>
+      </div>
+    
+    
+      <div class="row" style="margin-bottom: 5%">
+        <div class="col-md-7">
+          <a href="#">
+            <img class="img-thumbnail" src="img/coding-clicker2.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-5">
+          <h3>Coding Clicker</h3>
+          <p>A quick, fun 'Cookie Clicker' clone made for marketing purposes. Every time a user taps the Code For Change Logo on the website it contributes to the site's click number. We also have the website inform users that they have one a prize which can be redeemed at our club booth. This website has proven to be extreemely successful at club fairs, especially among children. </p>
+          <a href="https://coding-clicker.herokuapp.com" class="btn btn-primary btn-xl rounded-pill mt-1">View Project</a>
         </div>
       </div>
       <!-- /.row -->
