--- a/code/index.html
+++ b/code/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="img/logo.jpg" />
+    <link rel="icon" href="img/logo.png" />
 
     <title>Code For Change</title>
 
@@ -55,7 +55,6 @@
         <div class="container">
           <h1 class="masthead-heading mb-0">Code For Change</h1>
           <h2 class="masthead-subheading mb-0">Innovate. Educate. Serve.</h2>
-          <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
         </div>
       </div>
       <div class="bg-circle-1 bg-circle"></div>
@@ -74,7 +73,7 @@
           </div>
           <div class="col-lg-7 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">We work hard, so you don't have to</h2>
+              <h2 class="display-4 subhead">We work hard, so you don't have to</h2>
               <p>Our experienced developers will work around the clock to create a software solution that will meet your needs, and reduce your workload, so you can get back to doing what you do best - serving the community.</p>
             </div>
           </div>
@@ -92,7 +91,7 @@
           </div>
           <div class="col-lg-7">
             <div class="p-5">
-              <h2 class="display-4">Pro Bono</h2>
+              <h2 class="display-4 subhead">Pro Bono</h2>
               <p>For those who don't speak Latin, we'll do any project completely free. We also personally work with hosting and domain companies to ensure that these fees are as low as possible.</p>
             </div>
           </div>
@@ -110,7 +109,7 @@
           </div>
           <div class="col-lg-7 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">Helping you helps us</h2>
+              <h2 class="display-4 subhead">Helping you helps us</h2>
               <p>Code For Change is more than just a team of developers -- we are organization of ambitions students. Giving your local branch a project to work on helps those students further develop their Computer Science skills.</p>
             </div>
           </div>
