--- a/code/team.html
+++ b/code/team.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="img/logo.jpg" />
+    <link rel="icon" href="img/logo.png" />
 
     <title>Code For Change</title>
 
@@ -50,42 +50,42 @@
       </div>
     </nav>
 
-    <div class="container" style="padding-top:5%">
-      <h1 class="my-4">Our Team</h1>
+    <div class="container main-body-team" style="padding-top:5%">
+      <h1 class="display-1 headline">Our Team</h1>
 
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
+            <img src="img/armaan.jpg" alt="Armaan Goel" style="width:100%">
             <div class="container">
               <h2 style="margin-top:1rem;">Armaan Goel</h2>
               <p class="title">President &amp; Founder</p>
               <p style="padding-bottom:8%">Armaan got the idea for the club when visiting a “civic hackathon” in Indianapolis: a 24 hour event where teams compete to find coding solutions to community problems. Besides Code for Change, he also participates in the HiLite Newspaper, Techounds Robotics Team, Science Olympiad, and Boy Scouts. In his free time he likes to program, bike and go camping.</p>
-              <div class="text-center"><a href="#" class="btn btn-primary btn-xl rounded-pill2 mt-1">Contact</a></div>
+              <div class="text-center"><a href="mailto:armaangoel78@gmail.com" class="btn btn-primary btn-xl rounded-pill2 mt-1">Contact</a></div>
             </div>
           </div>
         </div>
 
         <div class="column">
           <div class="card">
-            <img src="https://www.w3schools.com/w3images/team2.jpg" alt="Mike" style="width:100%">
+            <img src="img/evan.jpg" alt="Evan Kenyon" style="width:100%">
             <div class="container">
               <h2 style="margin-top:1rem;">Evan Kenyon</h2>
               <p class="title">Vice President</p>
               <p>Evan assisted in starting the club when Armaan told him about the Civic Hackathons. Evan worked at an electronic health records company over this past summer doing coding. He also is vice president of Red Cross Club, troubleshoot lead of Computer Building Club and he is participating in the school robotics team and Model UN. In his free time, he likes to hang out with his friends and family.</p>
-              <div class="text-center"><a href="#" class="btn btn-primary btn-xl rounded-pill2 mt-1">Contact</a></div>
+              <div class="text-center"><a href="mailto:evan.m.kenyon@gmail.com" class="btn btn-primary btn-xl rounded-pill2 mt-1">Contact</a></div>
             </div>
           </div>
         </div>
 
         <div class="column">
           <div class="card">
-            <img src="https://www.w3schools.com/w3images/team3.jpg" alt="John" style="width:100%">
+            <img src="img/jared.jpg" alt="Jared Stigter" style="width:100%">
             <div class="container">
               <h2 style="margin-top:1rem;">Jared Stigter</h2>
               <p class="title">Chief Technology Officer</p>
               <p>When Armaan Goel approached Jared with the idea of a club dedicated to serving the community and a possible project to start, Jared jumped on board. He has been programming for several years and has developed a variety of skills. Besides Code For Change, Jared works part time and continues to develop other projects on the side, and enjoys computers, games, and movies.</p>
-              <div class="text-center"><a href="#" class="btn btn-primary btn-xl rounded-pill2 mt-1">Contact</a></div>
+              <div class="text-center"><a href="mailto:jaredstigter@gmail.com" class="btn btn-primary btn-xl rounded-pill2 mt-1">Contact</a></div>
             </div>
           </div>
         </div>
@@ -94,12 +94,12 @@
       <div class="row" style="margin-top: 1%;">
         <div class="column">
           <div class="card">
-            <img src="https://www.w3schools.com/w3images/team1.jpg" alt="Jane" style="width:100%">
+            <img src="img/rahul.jpg" alt="Rahul Devathu" style="width:100%">
             <div class="container">
               <h2 style="margin-top:1rem;">Rahul Devathu</h2>
               <p class="title">Head of Public Relations</p>
               <p>Rahul Devathu is a junior this year at Carmel High School. He started as a leader in the club from its fruition, and is currently heading the club with regards to PR and member education. Along with CFC, Rahul is also a member of a diverse assortment of clubs such as, Science Olympiad, Model United Nations, and German National Honor Society.</p>
-              <div class="text-center"><a href="#" class="btn btn-primary btn-xl rounded-pill2 mt-1">Contact</a></div>
+              <div class="text-center"><a href="mailto:radevathu@gmail.com" class="btn btn-primary btn-xl rounded-pill2 mt-1">Contact</a></div>
             </div>
           </div>
         </div>
