fixed random 'x' in navbar

--- a/code/index.html
+++ b/code/index.html
@@ -37,7 +37,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            x<a class="nav-link" href="projects.html">Projects</a>
+            <a class="nav-link" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="team.html">Team</a>
