added project types section to homepage

--- a/code/index.html
+++ b/code/index.html
@@ -21,6 +21,8 @@
     <!-- Custom styles for this template -->
     <link href="css/one-page-wonder.css" rel="stylesheet">
     <link href="css/team.css" rel="stylesheet">
+    <link href="https://blackrockdigital.github.io/startbootstrap-stylish-portfolio/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
 
 
   </head>
@@ -112,6 +114,52 @@
               <h2 class="display-4 subhead">Helping you helps us</h2>
               <p class="home">Code For Change is more than just a team of developers -- we are organization of ambitions students. Giving your local branch a project to work on helps those students further develop their Computer Science skills.</p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <section class="content-section bg-info text-white text-center services fade-in" id="services">
+      <div class="container">
+        <div class="content-section-heading fade-in">
+          <h1 class="display-4 subhead" style="padding-bottom: 5%">Project Types</h1>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0 fade-in">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-screen-desktop"></i>
+            </span>
+            <h4>
+              <strong>Web</strong>
+            </h4>
+            <p class="text-faded mb-0">Powerful, stunning websites</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0  fade-in">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-screen-smartphone"></i>
+            </span>
+            <h4>
+              <strong>Mobile</strong>
+            </h4>
+            <p class="text-faded mb-0">Technology on-the-go</p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-md-0  fade-in">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-graph"></i>
+            </span>
+            <h4>
+              <strong>Data</strong>
+            </h4>
+            <p class="text-faded mb-0">Gain powerful insights</p>
+          </div>
+          <div class="col-lg-3 col-md-6  fade-in">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="icon-question"></i>
+            </span>
+            <h4>
+              <strong>Other</strong>
+            </h4>
+            <p class="text-faded mb-0">Anything else we can do to help</p>
           </div>
         </div>
       </div>
