fix other issue (bubmles not moving) ?

--- a/code/index.html
+++ b/code/index.html
@@ -245,7 +245,7 @@
                 
                 console.log($(window).width())
                 if ( $(window).width() > 1100) {  
-                    $this.css('margin', scroll);s
+                    $this.css('margin', scroll);
                 }
               });
               
