added process section of homepage

--- a/code/projects.html
+++ b/code/projects.html
@@ -82,7 +82,7 @@
         <div class="col-md-5">
           <h3>Coding Clicker</h3>
           <p>A quick, fun 'Cookie Clicker' clone made for marketing purposes. Every time a user taps the Code For Change Logo on the website it contributes to the site's click number. We also have the website inform users that they have one a prize which can be redeemed at our club booth. This website has proven to be extreemely successful at club fairs, especially among children. </p>
-          <a href="https://coding-clicker.herokuapp.com" class="btn btn-primary btn-xl rounded-pill mt-1">View Project</a>
+          <a href="https://coding-clicker.herokuapp.com" style="margin: auto;" class="btn btn-primary btn-xl rounded-pill mt-1">View Project</a>
         </div>
       </div>
       <!-- /.row -->
