--- a/code/index.html
+++ b/code/index.html
@@ -72,7 +72,7 @@
         <div class="row align-items-center">
           <div class="col-lg-5 order-lg-2">
             <div class="p-5">
-              <img rel="preload" class="img-fluid rounded-circle scroll-enlarge" src="img/1.JPG" alt="">
+              <img class="img-fluid rounded-circle scroll-enlarge" src="img/1.JPG" alt="">
             </div>
           </div>
           <div class="col-lg-7 order-lg-1">
@@ -90,7 +90,7 @@
         <div class="row align-items-center">
           <div class="col-lg-5">
             <div class="p-5">
-              <img rel="preload" class="img-fluid rounded-circle scroll-enlarge" src="img/2.JPG" alt="">
+              <img class="img-fluid rounded-circle scroll-enlarge" src="img/2.JPG" alt="">
             </div>
           </div>
           <div class="col-lg-7">
@@ -108,7 +108,7 @@
         <div class="row align-items-center">
           <div class="col-lg-5 order-lg-2">
             <div class="p-5">
-              <img rel="preload" class="img-fluid rounded-circle scroll-enlarge" src="img/3.JPG" alt="">
+              <img class="img-fluid rounded-circle scroll-enlarge" src="img/3.JPG" alt="">
             </div>
           </div>
           <div class="col-lg-7 order-lg-1">
